# bonner-brainio

./: .docstr.yaml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
bonner/brainio/: __init__.py  _assembly.py  _catalog.py  _network.py  _stimulus_set.py  _utils.py  _validation.py  assembly.py  catalog.py  core.py  network.py  stimulus_set.py  utils.py
bonner/brainio/core/: assembly.py  catalog.py  network.py  stimulus_set.py  utils.py
docs/: .gitignore  SPECIFICATION.rst  conf.py  index.rst  private_api.rst  private_interface.rst  public_api.rst  public_interface.rst
docs/pages/: SPECIFICATION.rst  api_reference.rst  environment_variables.rst  private_interface.rst  public_interface.rst  user_guide.rst
